syntax = "proto3";

package user;

service UserService {
  rpc GetUser (UserIdRequest) returns (User) {}
  rpc GetUsers (UserIdsRequest) returns (Users) {}
  rpc SearchUsers (UserSearchRequest) returns (Users) {}
}

message User {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool married = 6;
}

message UserIdRequest {
  int32 id = 1;
}

message UserIdsRequest {
  repeated int32 ids = 1;
}

message UserSearchRequest {
  string fname = 1;
  string city = 2;
}

message Users {
  repeated User users = 1;
}
